Deocder has been added

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_library(EncodeLib STATIC Encode.cpp Node.cpp)
+add_library(EncodeLib STATIC 
+    Encode.cpp 
+    Node.cpp 
+    Decode.cpp)
 target_include_directories(EncodeLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
